# RS2-DMP-demo

./: README.md  package.xml  setup.cfg  setup.py  test_cdmps.py
cdmp/: README.md  requirements.txt  test_cdmps.py
cdmp/demos/: vr_demo.txt  vr_demo_uniform.txt
cdmp/src/: cdmps.py
config/: demo.rviz  panda_simulated_config.yaml  ros2_controllers.yaml
demos/: minJerk1.txt
launch/: panda_dmp_demo.launch.py  record_pose_trajectory.launch.py
rs2_dmp_demo/: record_pose_trajectory.py  test_cdmp_panda.py
src/: cdmps.py
