<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rs2_dmp_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tonyle98@outlook.com">Tony Le</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit</depend>
  <depend>moveit_resources_panda_moveit_config</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
